fixup: arm64: dts: qcom: sc8280xp-x13s: fix bluetooth regulator mode
The initial mode is not listed as allowed.

Keep the initial mode as 'HPM', disallow load to be set, and mark the
regulator as always-on for now to avoid interfering with the wifi part
of the chip which also uses this net.

Signed-off-by: Johan Hovold <johan+linaro@kernel.org>

--- a/arch/arm64/boot/dts/qcom/sc8280xp-lenovo-thinkpad-x13s.dts
+++ b/arch/arm64/boot/dts/qcom/sc8280xp-lenovo-thinkpad-x13s.dts
@@ -430,9 +430,7 @@
 			regulator-min-microvolt = <1880000>;
 			regulator-max-microvolt = <1900000>;
 			regulator-initial-mode = <RPMH_REGULATOR_MODE_HPM>;
-			regulator-allowed-modes = <RPMH_REGULATOR_MODE_AUTO>,
-						  <RPMH_REGULATOR_MODE_RET>;
-			regulator-allow-set-load;
+			regulator-always-on;
 		};
 
 		vreg_l1c: ldo1 {
